# ntk-ultra-compression

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  build.sh
.github/workflows/: build.yml  ci.yml
core/: Cargo.toml
core/src/: lib.rs
docs/: FAQ.md  security.md  user-guide.md
docs/technical/: README.md
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.tsx  main.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui_ntk_ultra_compression/: README.md  index.html  package-lock.json  package.json
gui_ntk_ultra_compression/src/: core.min.css  main.ts
gui_ntk_ultra_compression/src-tauri/: Cargo.toml  tauri.conf.json
gui_ntk_ultra_compression/src-tauri/icons/: icon.icns
gui_ntk_ultra_compression/src-tauri/src/: main.rs
ntk-ultra-compression/: Cargo.toml
ntk-ultra-compression/src/: main.rs
ntk-ultra-compression/src/security/: stegano.rs
ntk_ultra_compression/: Cargo.toml
ntk_ultra_compression/src/: lib.rs  main.rs
ntk_ultra_compression/src/bzip2_compression/: BWT.rs  Bzip2.rs  Huffman.rs  MTF.rs  RLE.rs  mod.rs
ntk_ultra_compression/src/bzip2_tests/: compressed_long_text.ntk
ntk_ultra_compression/src/lock_archive/: lock.rs
ntk_ultra_compression/src/paq_compression/: Cargo.toml  README
ntk_ultra_compression/src/security/: mod.rs  stegano.rs
paq_compression/: README
paq_compression/src/: compression.rs  decompression.rs  main.rs
src/: main.rs
test_files/: long_text.txt
test_files/archive/: README.md  long_text.txt.ntk
test_files/original/: README.md
test_files/result/: README.md
test_files/steg/: README.md
