[workspace]
members = [
    "core",
    "gui/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nathan Pelletti", "Thomas Demesse", "Keany Vy Khun", "Litissia Ben Mohand"]
license = "BSD-3-Clause"

[workspace.dependencies]
# Sérialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Gestion d'erreurs
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# GUI
tauri = { version = "1.4" }
tauri-build = { version = "1.4" }

# Compression
zstd = "0.12"
lz4 = "1.24"
brotli = "3.4"

# Cryptographie
aes-gcm = { version = "0.10", features = ["std"] }
pbkdf2 = { version = "0.12", features = ["std"] }
blake3 = "1.5"
sha2 = "0.10"

# Utilitaires
num_cpus = "1.16"
rayon = "1.8"
bytes = "1.5"
memmap2 = "0.9"
byteorder = "1.5" 