[package]
name = "ntk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core compression library for NTK Ultra-Compression"

[dependencies]
# Sérialization
serde.workspace = true
serde_json.workspace = true

# Gestion d'erreurs
anyhow.workspace = true
thiserror.workspace = true

# Compression
zstd.workspace = true
lz4.workspace = true
brotli.workspace = true

# Cryptographie
aes-gcm = { version = "0.10", features = ["std"] }
pbkdf2 = { version = "0.12", features = ["std"] }
blake3.workspace = true
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"

# Utilitaires
num_cpus.workspace = true
rayon.workspace = true
bytes.workspace = true
memmap2.workspace = true
byteorder = "1.4"

[lib]
name = "ntk_core"
path = "src/lib.rs" 