[package]
name = "ntk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core compression library for NTK Ultra-Compression"

[dependencies]
# Sérialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Gestion d'erreurs
anyhow.workspace = true
thiserror.workspace = true

# Compression
zstd.workspace = true
lz4.workspace = true
brotli.workspace = true

# Cryptographie
aes-gcm.workspace = true
pbkdf2.workspace = true
blake3.workspace = true
sha2.workspace = true
hex = "0.4"
getrandom = "0.2"

# Stéganographie et images
image = "0.24"
png = "0.17"

# Utilitaires
num_cpus.workspace = true
rayon.workspace = true
bytes.workspace = true
memmap2.workspace = true
byteorder.workspace = true

[lib]
name = "ntk_core"
path = "src/lib.rs" 