[package]
name = "ntk-ultra-compression-gui"
version.workspace = true
description = "GUI application for NTK Ultra-Compression"
authors.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
ntk-core = { path = "../../core" }
tauri = { workspace = true, features = ["dialog-all", "fs-all"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] 